[package]
name = "rect"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
namui = { path = "../../../namseent/namui" }
flow = { path = "../flow" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "Window",
    "Document",
]
